--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- ▲▲▲ ここに Header を追記します ▲▲▲ -->
 
   <!-- ▼▼▼ ここに Main を追記します ▼▼▼ -->
-  <main>Main</main>
+  <main>MAIN</main>
   <!-- ▲▲▲ ここに Main を追記します ▲▲▲ -->
 
   <!-- ▼▼▼ ここに Footer を追記します ▼▼▼ -->
