--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- ▲▲▲ ここに Main を追記します ▲▲▲ -->
 
   <!-- ▼▼▼ ここに Footer を追記します ▼▼▼ -->
+  <footer>footer</footer>
   <!-- ▲▲▲ ここに Footer を追記します ▲▲▲ -->
 </body>
 
